# validated

./: .gitignore  404.html  DATABASE_DESIGN.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_satellite_demo.py  run_tests.py  test_validate_call_experiment.py
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  release.yml  tests.yml
api/core/: index.html
api/loaders/: index.html
api/satellite/: index.html
api/validators/: index.html
database/: index.html
docs/: database.md  index.md
docs/api/: core.md  loaders.md  satellite.md  validators.md
search/: search_index.json
src/constraints/: __init__.py  decorator.py  exceptions.py  models.py
src/satellite/: __init__.py  models.py  validation.py
src/validated/: __init__.py  decorator.py  exceptions.py  loaders.py  models.py
src/validated/validators/: __init__.py  base.py  comparisons.py  exceptions.py  numpy.py  paths.py  predicates.py  proxy.py  sequences.py  strings.py
tests/: test_base.py  test_check_multi_and_multi_validators.py  test_constraints.py  test_loaders.py  test_model_ndarray.py  test_multi_validation.py  test_ndarray_support.py  test_path_validators.py  test_proxy_validator.py  test_pydantic_integration.py  test_regular_ndarray.py  test_satellite.py  test_sequence_validators.py  test_string_validators.py  test_validators.py
